# open-read-later-rust

./: Cargo.toml  readme.md
doc/: index.html  sidebar-items.js
doc/read_later_list/: LinkEntryBuilder.t.html  ReadLaterList.t.html  index.html  sidebar-items.js  struct.LinkEntry.html  struct.LinkEntryBuilder.html  struct.ReadLaterList.html
src/: lib.rs  main.rs  read_later_list.rs  util.rs
tests/: integration_test.rs
